--- a/gradle.properties
+++ b/gradle.properties
@@ -1,16 +1,15 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs = -Xmx1G
 
-# Fabric Properties, check these on http://modmuss50.me/fabric.html
-minecraft_version = 1.16.3
-yarn_mappings = 1.16.3+build.12
-loader_version = 0.9.3+build.207
+# Fabric Properties, check these on https://modmuss50.me/fabric.html
+minecraft_version = 1.17-pre4
+yarn_mappings = 1.17-pre4+build.1
+loader_version = 0.11.3
 
 # Mod Properties
-mod_version = 3.0.2+1.16.3
+mod_version = 3.0.3+1.17.pre4
 maven_group = io.github.joaoh1
 archives_base_name = boringbackgrounds
 
 # Dependencies
-fabric_version = 0.21.0+build.407-1.16
-fiber_version = 0.23.0-2
+fabric_version = 0.34.8+1.17
