--- a/gradle.properties
+++ b/gradle.properties
@@ -1,15 +1,15 @@
 # Done to increase the memory available to gradle.
-org.gradle.jvmargs = -Xmx1G
+org.gradle.jvmargs = -XX:+UseZGC -Xmx1G
 
-# Fabric Properties, check these on https://modmuss50.me/fabric.html
-minecraft_version = 1.17-pre4
-yarn_mappings = 1.17-pre4+build.1
-loader_version = 0.11.3
+# Fabric Properties, check these on https://fabricmc.net/versions.html
+minecraft_version = 1.17.1
+yarn_mappings = 1.17.1+build.2
+loader_version = 0.11.6
 
 # Mod Properties
-mod_version = 3.0.3+1.17.pre4
-maven_group = io.github.joaoh1
+mod_version = 3.0.4+1.17.1
+maven_group = io.github.ennuil
 archives_base_name = boringbackgrounds
 
 # Dependencies
-fabric_version = 0.34.8+1.17
+fabric_version = 0.37.1+1.17
