--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,10 @@
 # Done to increase the memory available to gradle.
-org.gradle.jvmargs = -XX:+UseZGC -Xmx1G
+org.gradle.jvmargs = -Xmx1G
 
 # Fabric Properties, check these on https://fabricmc.net/versions.html
 minecraft_version = 1.17.1
-yarn_mappings = 1.17.1+build.2
-loader_version = 0.11.6
+yarn_mappings = 1.17.1+build.63
+loader_version = 0.12.4
 
 # Mod Properties
 mod_version = 3.0.4+1.17.1
@@ -12,4 +12,4 @@ maven_group = io.github.ennuil
 archives_base_name = boringbackgrounds
 
 # Dependencies
-fabric_version = 0.37.1+1.17
+fabric_version = 0.41.3+1.17
