--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
-	id 'fabric-loom' version '0.9-SNAPSHOT'
-	id 'io.github.juuxel.loom-quiltflower' version '1.2.1'
+	id 'fabric-loom' version '0.10-SNAPSHOT'
+	id 'io.github.juuxel.loom-quiltflower-mini' version '1.0.0'
 	id 'maven-publish'
 }
 
@@ -17,13 +17,13 @@ version = System.env.GITHUB_ACTIONS == "true"
 group = project.maven_group
 
 repositories {
-	maven { url "https://maven.quiltmc.org/repository/release" }
+	maven { url "https://maven.terraformersmc.com/releases" }
 }
 
 dependencies {
 	// To change the versions, see the gradle.properties file
 	minecraft "com.mojang:minecraft:${project.minecraft_version}"
-	mappings "org.quiltmc:yarn:${project.yarn_mappings}:v2"
+	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
 	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 	
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
