--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,14 @@
 plugins {
 	id 'fabric-loom' version '0.10-SNAPSHOT'
 	id 'io.github.juuxel.loom-quiltflower-mini' version '1.1.0'
+	id "org.quiltmc.quilt-mappings-on-loom" version "3.1.1"
 	id 'maven-publish'
 }
 
-
 // Visual Studio Code completely ignores options.release.
 // So, we still have those two.
-sourceCompatibility = JavaVersion.VERSION_16
-targetCompatibility = JavaVersion.VERSION_16
+sourceCompatibility = JavaVersion.VERSION_17
+targetCompatibility = JavaVersion.VERSION_17
 
 archivesBaseName = project.archives_base_name
 version = System.env.GITHUB_ACTIONS == "true"
@@ -16,14 +16,12 @@ version = System.env.GITHUB_ACTIONS == "true"
 	: project.mod_version
 group = project.maven_group
 
-repositories {
-	maven { url "https://maven.terraformersmc.com/releases" }
-}
-
 dependencies {
 	// To change the versions, see the gradle.properties file
 	minecraft "com.mojang:minecraft:${project.minecraft_version}"
-	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
+	mappings loom.layered {
+		addLayer quiltMappings.mappings("org.quiltmc:quilt-mappings:${project.mappings_version}:v2")
+	}
 	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 	
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
@@ -44,8 +42,8 @@ tasks.withType(JavaCompile).configureEach {
 	// If Javadoc is generated, this must be specified in that task too.
 	it.options.encoding = "UTF-8"
 
-	// Minecraft 1.17 (21w19a) upwards uses Java 16.
-	it.options.release = 16
+	// Minecraft 1.18 (1.18-pre2) upwards uses Java 17.
+	it.options.release = 17
 }
 
 java {
@@ -62,14 +60,8 @@ jar {
 // Configure the maven publication
 publishing {
 	publications {
-		mavenJava(MavenPublication) {
-			// Add all the jars that should be included when publishing to maven
-			artifact(remapJar) {
-				builtBy remapJar
-			}
-			artifact(sourcesJar) {
-				builtBy remapSourcesJar
-			}
+		mavenJava(MavenPublication) {	
+			from components.java
 		}
 	}
 
