--- a/gradle.properties
+++ b/gradle.properties
@@ -1,15 +1,15 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs = -Xmx1G
 
-# Fabric Properties, check these on https://fabricmc.net/versions.html
-minecraft_version = 1.17.1
-yarn_mappings = 1.17.1+build.63
+# Fabric Properties, check these on https://github.com/QuiltMC/quilt-mappings/tags
+minecraft_version = 1.18-rc3
+mappings_version = 1.18-rc3+build.1
 loader_version = 0.12.5
 
 # Mod Properties
-mod_version = 3.0.5+1.17.1
+mod_version = 3.0.6+1.18.rc3
 maven_group = io.github.ennuil
 archives_base_name = boringbackgrounds
 
-# Dependencies
-fabric_version = 0.42.1+1.17
+# Dependencies, check Fabric API's version on https://fabricmc.net/versions.html
+fabric_version = 0.43.1+1.18
