Begin Quilt 1.19 port Imagine owning 2 PCs (oh, btw, this is broken atm)

--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,30 @@
-# gradle
-
+# Gradle
 .gradle/
 build/
 out/
 classes/
 
-# eclipse
+# Quilt Loom
+run/
 
+# Eclipse
 *.launch
 
-# idea
-
+# IntelliJ Idea
 .idea/
 *.iml
 *.ipr
 *.iws
 
-# vscode
-
+# Visual Studio Code
 .settings/
 .vscode/
 bin/
 .classpath
 .project
 
-# fabric
+# Eclipse JDT LS
+workspace/
 
-run/
+# macOS
+*.DS_Store
