--- a/gradle.properties
+++ b/gradle.properties
@@ -1,15 +1,10 @@
-# Done to increase the memory available to gradle.
+# Gradle Properties
 org.gradle.jvmargs = -Xmx1G
-
-# Fabric Properties, check these on https://github.com/QuiltMC/quilt-mappings/tags
-minecraft_version = 1.18-rc3
-mappings_version = 1.18-rc3+build.1
-loader_version = 0.12.5
+org.gradle.parallel = true
 
 # Mod Properties
-mod_version = 3.0.6+1.18.rc3
-maven_group = io.github.ennuil
-archives_base_name = boringbackgrounds
+version = 1.0.0+1.19
+maven_group = com.example
+archives_base_name = example_mod
 
-# Dependencies, check Fabric API's version on https://fabricmc.net/versions.html
-fabric_version = 0.43.1+1.18
+# Dependencies are managed at gradle/libs.versions.toml
