--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -18,3 +18,4 @@ quilted_fabric_api = { module = "org.quiltmc.quilted-fabric-api:quilted-fabric-a
 
 [plugins]
 quilt_loom = { id = "org.quiltmc.loom", version = "0.12.+" }
+machete = { id = "io.github.p03w.machete", version = "1.1.+" }
