--- a/gradle.properties
+++ b/gradle.properties
@@ -1,9 +1,9 @@
 # Gradle Properties
-org.gradle.jvmargs = -Xmx1G -XX:+UseShenandoahGC
+org.gradle.jvmargs = -Xmx1G
 org.gradle.parallel = true
 
 # Mod Properties
-version = 4.0.0+1.19
+version = 3.0.7+1.19
 maven_group = io.github.ennuil
 archives_base_name = boring_backgrounds
 
