--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,13 @@
 plugins {
 	id 'maven-publish'
-	alias(libs.plugins.quilt.loom)
-	alias(libs.plugins.machete)
+	alias libs.plugins.quilt.loom
 }
 
-archivesBaseName = project.archives_base_name
-version = project.version
+base {
+	archivesName = project.archives_base_name
+}
+
+version = "$project.version+${libs.versions.minecraft.get()}"
 group = project.maven_group
 
 repositories {
@@ -16,14 +18,21 @@ repositories {
 	// for more information about repositories.
 }
 
+loom {
+	// Loom and Loader both use this block in order to gather more information about your mod.
+	mods {
+		// This should match your mod id.
+		"boring_backgrounds" {
+			sourceSet("main")
+		}
+	}
+}
+
 // All the dependencies are declared at gradle/libs.version.toml and referenced with "libs.<id>"
 // See https://docs.gradle.org/current/userguide/platforms.html for information on how version catalogs work.
 dependencies {
 	minecraft libs.minecraft
-	mappings loom.layered {
-		addLayer quiltMappings.mappings("org.quiltmc:quilt-mappings:${libs.versions.quilt.mappings.get()}:v2")
-		// officialMojangMappings() // Uncomment if you want to use Mojang mappings as your primary mappings, falling back on QM for parameters and Javadocs
-	}
+	mappings variantOf(libs.quilt.mappings) { classifier 'intermediary-v2' }
 	modImplementation libs.quilt.loader
 
 	// QSL is not a complete API; You will need Quilted Fabric API to fill in the gaps.
@@ -33,15 +42,15 @@ dependencies {
 }
 
 processResources {
-	inputs.property "version", version
+	inputs.property 'version', version
 
 	filesMatching('quilt.mod.json') {
-		expand "version": version
+		expand 'version': version
 	}
 }
 
 tasks.withType(JavaCompile).configureEach {
-	it.options.encoding = "UTF-8"
+	it.options.encoding = 'UTF-8'
 	// Minecraft 1.18 (1.18-pre2) upwards uses Java 17.
 	it.options.release = 17
 }
@@ -55,21 +64,16 @@ java {
 	// If you remove this line, sources will not be generated.
 	withSourcesJar()
 
-	// If this mod is going to be a library, then it should also generate Javadocs in order to aid with developement.
+	// If this mod is going to be a library, then it should also generate Javadocs in order to aid with development.
 	// Uncomment this line to generate them.
 	// withJavadocJar()
 }
 
 // If you plan to use a different file for the license, don't forget to change the file name here!
 jar {
-	from("LICENSE") {
-		rename { "${it}_${archivesBaseName}" }
+	from('LICENSE') {
+		rename { "${it}_${base.archivesName.get()}" }
 	}
-}
-
-machete {
-	// JSON minification isn't effective on this scale and sacrifices readability
-	optimizations.json = false
 }
 
 // Configure the maven publication
