--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@ org.gradle.jvmargs = -Xmx1G
 org.gradle.parallel = true
 
 # Mod Properties
-version = 3.0.7+1.19
+version = 3.0.8
 maven_group = io.github.ennuil
 archives_base_name = boring_backgrounds
 
